Pheasants now spawn properly and wolves try to eat them. Also changed spawn mechanics to widen the range that animals can spawn at, and added bio temperature to the health/temp screen